Made navbar fixed top and added section tags for enclosure of the content and for navbar spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,6 +38,10 @@ nav {
     z-index: 2;
 }
 
+section {
+    padding-top: var(--navbarHeight);
+}
+
 .category .card {
     background-color: var(--primary-color);
 }
